--- a/style-D.css
+++ b/style-D.css
@@ -76,10 +76,10 @@ p {
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  margin: 2rem 0;
+  margin: 2rem 0 ;
   align-items: center;
   text-align: center;
-  padding: 4rem 0;
+   padding: 0 auto;   /* Add padding top & bottom once you show the dashboard text */
 }
 
 .dashboard-hero.with-candles {
@@ -113,7 +113,7 @@ p {
 
 
 .hero-text {
-  display: flex;
+  display: none;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -143,9 +143,9 @@ p {
   border-radius: 1rem;
   padding: 1.5rem;
   color: white;
-  width: 100%;
+  width: 90%;
   height: auto;
-  min-height: 200px;
+  min-height: 160px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -916,6 +916,14 @@ footer a {
 
 
 
+/* =============== Mobile Hero text =============== */
+
+/* @media (max-width: 500px) {
+  .hero-text {
+    display: none;
+  }
+} */
+
 
 
 /* =============== DESKTOP MEDIA QUERY =============== */
@@ -952,6 +960,7 @@ footer a {
     align-items: center;
     text-align: left;
     margin: 2rem 0;
+    padding: 4rem 0;
     gap: 2rem;
   }
 
